@@ -24,10 +24,10 @@
 #include "eca-audio-format.h"
 #include "eca-error.h"
 
-const ECA_AUDIO_FORMAT default_ecasound_audio_format (2, 
-						      44100, 
-						      ECA_AUDIO_FORMAT::sfmt_s16_le,
-						      true);
+static const ECA_AUDIO_FORMAT default_ecasound_audio_format (2, 
+							     44100, 
+							     ECA_AUDIO_FORMAT::sfmt_s16_le,
+							     true);
 ECA_AUDIO_FORMAT::ECA_AUDIO_FORMAT (int ch, 
 				    long int srate, 
 				    ECA_AUDIO_FORMAT::Sample_format format, 
